# ValsPokerAgent

./: .gitignore  README.md  generate_new_model_eval.py  generate_variations.py  gpt_agent.py  llm_agent_play.py  poker_table.py  pyproject.toml  resume_game.py  resume_seatings.sh  run_batch_tmux.sh  utils.py  validate_logs.py
analysis/: analyze_log.py  analyze_model_actions.py  analyze_seed_batch.py  calculate_trueskill_ratings.py  plot_all_chips.py
configs/: config.yaml  new_models_config.yaml
